<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.lupinemoon.boilerplate.presentation.ui.features.offline.OfflineViewModel"/>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <include layout="@layout/toolbar" />

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:id="@+id/parent_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_ee"
            android:fitsSystemWindows="false"
            android:isScrollContainer="true"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/got_it_button_container"
                android:layout_margin="@dimen/dialog.margin.m"
                android:background="@color/white"
                app:cardElevation="@dimen/fab.elevation.s">

                <android.support.v4.widget.NestedScrollView
                    android:id="@+id/offline_scroll_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dialog.margin.l"
                            android:layout_marginEnd="@dimen/dialog.margin.xl"
                            android:layout_marginLeft="@dimen/dialog.margin.xl"
                            android:layout_marginRight="@dimen/dialog.margin.xl"
                            android:layout_marginStart="@dimen/dialog.margin.xl"
                            android:layout_marginTop="@dimen/dialog.margin.l"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextMedium.Dialog.Title.Large"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/dialog.margin.l"
                                android:layout_marginTop="@dimen/dialog.margin.l"
                                android:gravity="center"
                                android:text="@string/offline_header_title"/>

                            <TextView
                                style="@style/TextRegular.Dialog.Message.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/dialog.margin.l"
                                android:layout_marginTop="@dimen/dialog.margin.l"
                                android:gravity="center"
                                android:lineSpacingExtra="4dp"
                                android:text="@{viewModel.offlineHeaderMessage}"/>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="@dimen/dialog.margin.l"
                            android:layout_marginTop="@dimen/dialog.margin.l"
                            android:background="@color/grey_ee"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dialog.margin.l"
                            android:layout_marginEnd="@dimen/dialog.margin.xl"
                            android:layout_marginLeft="@dimen/dialog.margin.xl"
                            android:layout_marginRight="@dimen/dialog.margin.xl"
                            android:layout_marginStart="@dimen/dialog.margin.xl"
                            android:layout_marginTop="@dimen/dialog.margin.l"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextMedium.Dialog.Title.Medium"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/dialog.margin.l"
                                android:layout_marginTop="@dimen/dialog.margin.l"
                                android:gravity="start|left"
                                android:text="@string/offline_section_1_title"/>

                            <TextView
                                style="@style/TextRegular.Dialog.Message.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/dialog.margin.l"
                                android:gravity="start|left"
                                android:lineSpacingExtra="4dp"
                                android:text="@string/offline_section_1_message"/>

                            <View
                                android:layout_width="40dp"
                                android:layout_height="2dp"
                                android:layout_marginBottom="@dimen/dialog.margin.xl"
                                android:layout_marginTop="@dimen/dialog.margin.xl"
                                android:background="@color/color_accent"/>

                            <TextView
                                style="@style/TextMedium.Dialog.Title.Medium"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/dialog.margin.l"
                                android:layout_marginTop="@dimen/dialog.margin.l"
                                android:gravity="start|left"
                                android:text="@string/offline_section_2_title"/>

                            <TextView
                                style="@style/TextRegular.Dialog.Message.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/dialog.margin.l"
                                android:gravity="start|left"
                                android:lineSpacingExtra="4dp"
                                android:text="@string/offline_section_2_message"/>

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v4.widget.NestedScrollView>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/got_it_button_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/got_it_button"
                        style="@style/TextRegular.Button"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/default_button_height"
                        android:layout_margin="@dimen/default_button_margin"
                        android:background="@drawable/selector_button_secondary_outline_rounded"
                        android:clickable="true"
                        android:onClick="@{() -> viewModel.onGotItClick()}"
                        android:text="@string/ok_got_it"/>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

</layout>